--- a/client/index.html
+++ b/client/index.html
@@ -10,5 +10,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://sdk.amazonaws.com/js/aws-sdk-2.48.0.min.js"></script>
+  <script src="/static/lex.js"></script> 
 </html>
 
